webviews for unices

--- a/unix/meson.build
+++ b/unix/meson.build
@@ -44,12 +44,17 @@ libui_sources += [
 	'unix/tablemodel.c',
 	'unix/text.c',
 	'unix/util.c',
+	'unix/webview.c',
 	'unix/window.c',
 ]
 
 libui_deps += [
 	dependency('gtk+-3.0',
 		version: '>=3.10.0',
+		method: 'pkg-config',
+		required: true),
+	dependency('webkit2gtk-4.0',
+		version: '>=2.42',
 		method: 'pkg-config',
 		required: true),
 	# We specify these as not required because some Unix systems include them with libc instead of providing them as separate files (thanks textshell and jpakkane in freenode #mesonbuild)
