--- a/darwin/meson.build
+++ b/darwin/meson.build
@@ -58,7 +58,7 @@ libui_deps += [
 	meson.get_compiler('objc').find_library('objc',
 		required: true),
 	dependency('appleframeworks',
-		modules: ['Foundation', 'AppKit', 'Webkit'],
+		modules: ['Foundation', 'AppKit', 'WebKit'],
 		required: true),
 ]
 # the / is required by some older versions of OS X
