--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
           python3 -m pip install --upgrade pip setuptools wheel
           pip3 install meson ninja
           sudo apt-get update -y
-          sudo apt-get install -y libgtk-3-dev xvfb
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev xvfb
       - name: Checkout
         uses: actions/checkout@v4
       - name: Meson Setup Build
@@ -79,6 +79,9 @@ jobs:
       - name: Meson Setup Build
         shell: cmd
         run: meson setup builddir --buildtype=${{ matrix.buildtype }} --default-library=${{ matrix.libtype }}
+      - name: Add WebView2 dependencies
+        shell: cmd
+        run: mkdir deps\webview2 ; curl -sSL https://www.nuget.org/api/v2/package/Microsoft.Web.WebView2 | tar -xf - -C deps\webview2
       - name: Ninja Build
         run: ninja -C builddir --verbose
       - name: Run Tests
