--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,13 +82,13 @@ jobs:
       - name: Add WebView2 dependencies
         shell: cmd
         run: |
-          mkdir deps\webview2
-          curl -sSL https://www.nuget.org/api/v2/package/Microsoft.Web.WebView2 | tar -xf - -C deps\webview2
+          mkdir deps\\webview2
+          curl -sSL https://www.nuget.org/api/v2/package/Microsoft.Web.WebView2 | tar -xf - -C deps\\webview2
       - name: Ninja Build
         run: ninja -C builddir --verbose
       - name: Copy WebView2 binaries
         shell: cmd
-        run: cp deps\webview2\build\native\x64\* builddir
+        run: cp deps\\webview2\\build\\native\\x64\\* builddir
       - name: Run Tests
         run: meson test -C builddir --verbose
       - name: Upload artifacts
